--- a/pokedex.html
+++ b/pokedex.html
@@ -22,25 +22,20 @@
     <div class="pokedex relative b-red">
 
         <img id="pokedex-img" src="assets/img/pokedex-bg.jpg" height="600px">
-        <div class="pantalla-principal pantalla ">
-            <div id="pokeInfo" class="container-fluid text-center texto absolute "></div>
-            <div id="pStats" class="relative b-blue"></div>
-            <img id="loading-img" class="absolute" height="40px " alt="loading sun" src="https://media.giphy.com/media/jQbinPsqqfg8GFxbQw/giphy.gif">
-
-
-            <!-- src="https://thumbs.gfycat.com/GenerousTimelyBrontosaurus.webp"> -->
-            <!--gif pokebola https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/5f321b49-5fa7-407b-aaa0-cca6992d3d7c/d5s04qj-d26a072a-3294-4da7-8ab9-a1be78141275.gif?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvNWYzMjFiNDktNWZhNy00MDdiLWFhYTAtY2NhNjk5MmQzZDdjXC9kNXMwNHFqLWQyNmEwNzJhLTMyOTQtNGRhNy04YWI5LWExYmU3ODE0MTI3NS5naWYifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.gWBUVMHRmWPWZKDMUq_IhJHGESw1V08pyjsmFbbj07A"> -->
-            <!--gif sol //"https://static1.squarespace.com/static/50afe7a5e4b05036d3ab41d4/t/572cfaf3859fd009b42e9385/1462565620280/yellow-loading-icon.gif "> -->
+        <div class="pantalla-principal pantalla b-blue">
+            <div id="pokeInfo" class="container-fluid text-center texto absolute b-green"></div>
+            <div id="pStats" class="relative b-red "></div>
+            <img id="loading-img" class="absolute" height="40px " alt="loading sun" src="https://static1.squarespace.com/static/50afe7a5e4b05036d3ab41d4/t/572cfaf3859fd009b42e9385/1462565620280/yellow-loading-icon.gif ">
         </div>
 
 
-        <form id="formulario" class="pantalla-busqueda pantalla absolute zi-3">
+        <form id="formulario" class="pantalla-busqueda pantalla absolute zi-3 b-blue">
             <input id="buscador" type="text" class="busqueda" onfocus="resetScreen()" placeholder="¿Qué Pokemon?">
             <input class="controles relative" id="enter" type="submit" value="Enter">
         </form>
         <div class="pantalla-busqueda text-center texto mensaje absolute" onclick="$('.busqueda').focus()" id="encontrado-mensaje">Encontrado!</div>
 
-        <div id="infoBox" class="   ">
+        <div id="infoBox" class="b-green">
 
             <div id="pokemonList"></div>
 
@@ -53,9 +48,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/jquery.canvasjs.min.js"></script>
-    <script type="text/javascript" src="assets/js/pokedex_script_main.js"></script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
 </body>
-<link rel="stylesheet" href="assets/css/pokedex.css">
 
 </html>
