--- a/pokedex.html
+++ b/pokedex.html
@@ -22,14 +22,14 @@
     <div class="pokedex relative b-red">
 
         <img id="pokedex-img" src="assets/img/pokedex-bg.jpg" height="600px">
-        <div class="pantalla-principal pantalla b-blue">
-            <div id="pokeInfo" class="container-fluid text-center texto absolute b-green"></div>
+        <div class="pantalla-principal pantalla ">
+            <div id="pokeInfo" class="container-fluid text-center texto absolute "></div>
             <div id="pStats" class="relative b-red "></div>
             <img id="loading-img" class="absolute" height="40px " alt="loading sun" src="https://static1.squarespace.com/static/50afe7a5e4b05036d3ab41d4/t/572cfaf3859fd009b42e9385/1462565620280/yellow-loading-icon.gif ">
         </div>
 
 
-        <form id="formulario" class="pantalla-busqueda pantalla absolute zi-3 b-blue">
+        <form id="formulario" class="pantalla-busqueda pantalla absolute zi-3 ">
             <input id="buscador" type="text" class="busqueda" onfocus="resetScreen()" placeholder="¿Qué Pokemon?">
             <input class="controles relative" id="enter" type="submit" value="Enter">
         </form>
