--- a/pokedex.html
+++ b/pokedex.html
@@ -19,12 +19,12 @@
 
 <body>
 
-    <div class="pokedex relative b-red">
+    <div class="pokedex relative">
 
         <img id="pokedex-img" src="assets/img/pokedex-bg.jpg" height="600px">
         <div class="pantalla-principal pantalla ">
             <div id="pokeInfo" class="container-fluid text-center texto absolute "></div>
-            <div id="pStats" class="relative b-red "></div>
+            <div id="pStats" class="relative "></div>
             <img id="loading-img" class="absolute" height="40px " alt="loading sun" src="https://static1.squarespace.com/static/50afe7a5e4b05036d3ab41d4/t/572cfaf3859fd009b42e9385/1462565620280/yellow-loading-icon.gif ">
         </div>
 
@@ -35,7 +35,7 @@
         </form>
         <div class="pantalla-busqueda text-center texto mensaje absolute" onclick="$('.busqueda').focus()" id="encontrado-mensaje">Encontrado!</div>
 
-        <div id="infoBox" class="b-green">
+        <div id="infoBox" class="">
 
             <div id="pokemonList"></div>
 
