--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="col-12">
         <div class="overlay"></div>
         <video playsinline="playsinline" autoplay="autoplay" loop="loop">
-          <source src="ghostritualdonthugme-v1.0.mp4" type="video/mp4">
+          <source src="ghostritualdonthugme-v1.0-24.7mb.mp4" type="video/mp4">
         </video>
         <div class="container h-100">
             <div class="d-flex h-100 text-center align-items-center">
