--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="overlay"></div>
         <video id="header-video" style="max-width: 100%; height: auto;" playsinline="playsinline" autoplay="autoplay" loop="loop">
           <source src="ghost-slow.mp4.mp4" type="video/mp4">
+            <source src="ghostritualdonthugme-v1.0-24.7mb.webm" type="video/webm">
         </video>
         <div class="container h-100">
             <div class="d-flex h-100 text-center align-items-center">
