--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="col-12">
         <div class="overlay"></div>
         <video id="header-video" style="max-width: 100%; height: auto;" playsinline="playsinline" autoplay="autoplay" loop="loop">
-          <source src="ghost-slow.mp4.mp4" type="video/mp4">
+          <source src="ghost-slow.mp4" type="video/mp4">
            
         </video>
         <div class="container h-100">
